# introduction-to-qt-tasks

./: CMakeLists.txt  README.md  main.cpp
task1/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt  main.cpp
task3/: CMakeLists.txt  main.cpp
task4/: CMakeLists.txt  CustomWidget.cpp  main.cpp
task5/: CMakeLists.txt  CalculatorWidget.cpp  main.cpp
task6/: CMakeLists.txt  main.cpp
task7/: CMakeLists.txt  main.cpp
task8/: CMakeLists.txt  main.cpp
